--- a/.travis.yaml
+++ b/.travis.yaml
@@ -3,7 +3,7 @@ before_install:
   # Install Emacs
   - sudo add-apt-repository -y ppa:cassou/emacs
   - sudo apt-get update -qq
-  - sudo apt-get install -qq $EMACS
+  - sudo apt-get install -qq emacs
   # Install Cask
   - curl -fsSkL --max-time 10 --retry 10 --retry-delay 10
       https://raw.github.com/cask/cask/master/go | python
@@ -11,7 +11,3 @@ before_install:
   - cask 
 script:
   make
-  # safelist
-branches:
-  only:
-  - master
