--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ before_install:
   - curl -fsSkL --max-time 10 --retry 10 --retry-delay 10
       https://raw.github.com/cask/cask/master/go | python
   - export PATH="$HOME/.cask/bin:$PATH"
-  - cask 
+  - cask install
 script:
   make
