--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,8 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq emacs
   # Install Cask
-  - git clone --depth=1 https://github.com/cask/cask.git "$(HOME)/.cask"
-  - mkdir -p "$(HOME)/bin"
-  - ln -s "$(HOME)/.cask/bin/cask" "$(HOME)/bin/cask"
-  - export PATH="$HOME/.cask/bin:$PATH"
+  - git clone --depth=1 https://github.com/cask/cask.git ~/.cask"
+  - export PATH="~/.cask/bin:$PATH"
   - cask
 install:
   # Install your dependencies
