--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq emacs
   # Install Cask
-  - git clone --depth=1 https://github.com/cask/cask.git ~/.cask"
+  - git clone --depth=1 https://github.com/cask/cask.git ~/.cask
   - export PATH="~/.cask/bin:$PATH"
   - cask
 install:
